--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <title>Calm Little Stars</title>
 </head>
 
@@ -24,25 +24,25 @@
 
         <div class="collapse navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav mx-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
+                <li class="nav-item nav-padding-lg active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item nav-padding-lg">
                     <a class="nav-link" href="#">Benefits</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item nav-padding-lg">
                     <a class="nav-link" href="#">Facts</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item nav-padding-lg">
                     <a class="nav-link" href="#">Experience</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item nav-padding-lg">
                     <a class="nav-link" href="#">Benefits</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item nav-padding-lg">
                     <a class="nav-link" href="#">Classes</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item nav-padding-lg">
                     <a class="nav-link" href="#">Your Coach</a>
                 </li>
             </ul>
