--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign Up</button>
+                <button class="btn btn-outline-success nav-button-align my-2 my-sm-0" type="submit">Sign Up</button>
             </form>
         </div>
     </nav>
