Align menu button right

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                     <a class="nav-link" href="#">Your Coach</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <button class="btn btn-outline-success nav-button-align my-2 my-sm-0" type="submit">Sign Up</button>
+            <form class="form-inline my-2 my-lg-0 nav-btn-align">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign Up</button>
             </form>
         </div>
     </nav>
