Center align cta button in top container

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </ul>
             
             <form class="form-inline my-2 my-lg-0 nav-btn-align">
-                <button class="btn btn-outline-success my-2 my-sm-0 btn-center" type="submit">Sign Up</button>
+                <button class="btn btn-outline-success my-2 my-sm-0 btn-center" type="submit">Become Mindful</button>
             </form>
         
         </div>
@@ -60,19 +60,21 @@
 
     <section>
         <div class="container-fluid container-topcallout"><div class="row">
-            <div class="col-12">
+            <div class="col-12 justify-content-center">
                 <section>
                     <h1 class="page-header">After School Mindfulness Classes for 7-11 Year Olds</h1>
                     <h3 class="page-header">Holmfirth, West Yorkshire</h3>
-                    <button class="btn btn-success btn-lg btn-center">Sign Up!</button>
+                    <div class="row">
+                        <div class="col-12 justify-content-center btn-center">
+                            <button class="btn btn-success btn-lg">Become Mindful</button>
+                        </div>
+                    </div>
                 </section>
             </div>
         </div>
         </div>
-
     </section>
-
-    <!-- /Top Splashscreen section-->
+    <!-- /Top callout section-->
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
