Adjust width of content in topcallout to 50% with center align

--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
                     <a class="nav-link" href="#">Experience</a>
                 </li>
                 <li class="nav-item nav-padding-lg">
-                    <a class="nav-link" href="#">Benefits</a>
-                </li>
-                <li class="nav-item nav-padding-lg">
                     <a class="nav-link" href="#">Classes</a>
                 </li>
                 <li class="nav-item nav-padding-lg">
@@ -59,8 +56,9 @@
     <!-- Top callout section-->
 
     <section>
-        <div class="container-fluid container-topcallout"><div class="row">
-            <div class="col-12 justify-content-center">
+        <div class="container-fluid container-topcallout">
+            <div class="row justify-content-center">
+            <div class="col-12 col-md-6">
                 <section>
                     <h1 class="page-header">After School Mindfulness Classes for 7-11 Year Olds</h1>
                     <h3 class="page-header">Holmfirth, West Yorkshire</h3>
