Fix bug caused by Flex in css

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                     <a class="nav-link" href="#">Your Coach</a>
                 </li>
             </ul>
-            
+
             <form class="form-inline my-2 my-lg-0 nav-btn-align">
                 <button class="btn btn-outline-success my-2 my-sm-0 btn-center" type="submit">Become Mindful</button>
             </form>
-        
+
         </div>
     </nav>
 
@@ -55,42 +55,60 @@
 
     <!-- Top callout section-->
 
-    <section>
-        <div class="container-fluid container-topcallout">
-            <div class="row justify-content-center">
-            <div class="col-12 col-md-6">
-                <section>
-                    <h1 class="page-header">After School Mindfulness Classes for 7-11 Year Olds</h1>
-                    <h3 class="page-header">Holmfirth, West Yorkshire</h3>
-                    <div class="row">
-                        <div class="col-12 justify-content-center btn-center">
-                            <button class="btn btn-success btn-lg">Become Mindful</button>
-                        </div>
-                    </div>
-                </section>
+
+    <div class="container-fluid container-topcallout">
+        <div class="row justify-content-center">
+            <div class="col-10 col-md-6">
+
+                <h1 class="page-header">After School Mindfulness Classes for 7-11 Year Olds</h1>
+                <h3 class="page-header">Holmfirth, West Yorkshire</h3>
+
+
             </div>
         </div>
+        <div class="row">
+            <div class="col-12 btn-center">
+                <button class="btn btn-success btn-lg">Become Mindful</button>
+            </div>
         </div>
-    </section>
+    </div>
+
     <!-- /Top callout section-->
 
 
-    <!-- Reasons section-->
-<div class="container-fluid container-reasonscallout">
-    Container 2
-</div>
-    <!-- /Reasons section-->
+    <!-- Benefits section-->
+    <div class="container-fluid container-benefitscallout">
+        <div class="row justify-content-center">
+
+            <!--<div class="col-12 col-md-6 offset-md-3 align-self-center redbox">-->
+            <!--    <h1>Benefits of Mindfulness for Children</h1>-->
+            <!--</div>-->
+
+            <div class="col-12 px-5 redbox text-center">
+                <h1>Benefits of Mindfulness for Children test 1</h1>
+            </div>
+        </div>
+
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6 btn-center redbox">
+                <button class="btn btn-success btn-lg">Become Mindful</button>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- /Benefits section-->
 
     <!-- Facts section-->
-<div class="container-fluid container-factscallout">
-    Container 3
-</div>
+    <div class="container-fluid container-factscallout">
+        Container 3
+    </div>
     <!-- /Facts section-->
 
     <!-- Experience section-->
-<div class="container-fluid container-experiencecallout">
-    Container 4
-</div>
+    <div class="container-fluid container-experiencecallout">
+        Container 4
+    </div>
     <!-- /Experience section-->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
