Add vertical centering to top section. Simplify css for main containers.

--- a/index.html
+++ b/index.html
@@ -56,14 +56,12 @@
     <!-- Top callout section-->
 
 
-    <div class="container-fluid container-topcallout">
-        <div class="row justify-content-center">
-            <div class="col-10 col-md-6">
+    <div class="container-fluid container-medium container-callout-light">
+        <div class="row justify-content-center align-items-end row-small">
+            <div class="col-10 col-sm-6">
 
                 <h1 class="page-header">After School Mindfulness Classes for 7-11 Year Olds</h1>
                 <h3 class="page-header">Holmfirth, West Yorkshire</h3>
-
-
             </div>
         </div>
         <div class="row">
@@ -80,13 +78,10 @@
     <div class="container-fluid container-benefitscallout">
         <div class="row justify-content-center">
 
-            <!--<div class="col-12 col-md-6 offset-md-3 align-self-center redbox">-->
-            <!--    <h1>Benefits of Mindfulness for Children</h1>-->
-            <!--</div>-->
-
-            <div class="col-12 px-5 redbox text-center">
-                <h1>Benefits of Mindfulness for Children test 1</h1>
+            <div class="col-12 col-md-6 redbox">
+                <h1 class="page-header">Benefits of Mindfulness for Children</h1>
             </div>
+
         </div>
 
         <div class="row justify-content-center">
@@ -100,9 +95,49 @@
     <!-- /Benefits section-->
 
     <!-- Facts section-->
-    <div class="container-fluid container-factscallout">
-        Container 3
-    </div>
+    
+
+    <!--<div class="container">-->
+    <!--	<div class="row text-center my-2">-->
+    <!--		<div class="col-sm-12">-->
+    <!--			<h1>Benefits of Mindfulness for Children</h1>-->
+    <!--		</div>-->
+    <!--	</div>-->
+    <!--	<div class="row">-->
+    <!--		<div class="col-sm-12 col-md-4">-->
+    <!--			<div class="card" style="width: 18rem;">-->
+    <!--				<img src="https://picsum.photos/1920/1080?random" class="card-img-top" alt="...">-->
+    <!--				<div class="card-body">-->
+    <!--					<h5 class="card-title">Card title</h5>-->
+    <!--					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
+    <!--				</div>-->
+    <!--			</div>-->
+    <!--		</div>-->
+    <!--		<div class="col-sm-12 col-md-4">-->
+    <!--			<div class="card" style="width: 18rem;">-->
+    <!--				<img src="https://picsum.photos/1920/1080?random" class="card-img-top" alt="...">-->
+    <!--				<div class="card-body">-->
+    <!--					<h5 class="card-title">Card title</h5>-->
+    <!--					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
+    <!--				</div>-->
+    <!--			</div>-->
+    <!--		</div>-->
+    <!--		<div class="col-sm-12 col-md-4">-->
+    <!--			<div class="card" style="width: 18rem;">-->
+    <!--				<img src="https://picsum.photos/1920/1080?random" class="card-img-top" alt="...">-->
+    <!--				<div class="card-body">-->
+    <!--					<h5 class="card-title">Card title</h5>-->
+    <!--					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
+
+    <!--				</div>-->
+    <!--			</div>-->
+    <!--		</div>-->
+    <!--	</div>-->
+    <!--	<div class="row mt-5"><div class="col-sm-12 text-center">-->
+    <!--		<a href="#" class="btn btn-success btn-lg">Save the World</a>-->
+    <!--		</div></div>-->
+    <!--</div>-->
+
     <!-- /Facts section-->
 
     <!-- Experience section-->
