Vertically align all main containers on index.html

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <!-- Top callout section-->
 
 
-    <div class="container-fluid container-medium container-callout-light">
-        <div class="row justify-content-center align-items-end row-small">
+    <div class="container-fluid container-large container-callout-light">
+        <div class="row justify-content-center align-items-end row-large">
             <div class="col-10 col-sm-6">
 
                 <h1 class="page-header">After School Mindfulness Classes for 7-11 Year Olds</h1>
@@ -75,13 +75,12 @@
 
 
     <!-- Benefits section-->
-    <div class="container-fluid container-benefitscallout">
-        <div class="row justify-content-center">
+    <div class="container-fluid container-medium container-callout-dark">
 
+        <div class="row justify-content-center align-items-end row-medium">
             <div class="col-12 col-md-6 redbox">
                 <h1 class="page-header">Benefits of Mindfulness for Children</h1>
             </div>
-
         </div>
 
         <div class="row justify-content-center">
@@ -96,6 +95,20 @@
 
     <!-- Facts section-->
     
+        <div class="container-fluid container-medium container-callout-light">
+
+        <div class="row justify-content-center align-items-end row-medium">
+            <div class="col-12 col-md-6 redbox">
+                <h1 class="page-header">Content</h1>
+            </div>
+        </div>
+
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6 btn-center redbox">
+                <button class="btn btn-success btn-lg">Become Mindful</button>
+            </div>
+        </div>
+    </div>
 
     <!--<div class="container">-->
     <!--	<div class="row text-center my-2">-->
@@ -141,8 +154,15 @@
     <!-- /Facts section-->
 
     <!-- Experience section-->
-    <div class="container-fluid container-experiencecallout">
-        Container 4
+    <div class="container-fluid container-medium container-callout-dark">
+
+        <div class="row justify-content-center align-items-end row-medium">
+            <div class="col-12 col-md-6 redbox">
+                <h1 class="page-header">Content</h1>
+            </div>
+        </div>
+
+ 
     </div>
     <!-- /Experience section-->
 
