Make cols in Main Container 2 responsive in index.html

--- a/index.html
+++ b/index.html
@@ -75,11 +75,31 @@
 
 
     <!-- Benefits section-->
-    <div class="container-fluid container-medium container-callout-dark">
+    <div class="container-fluid container-large container-callout-dark">
 
-        <div class="row justify-content-center align-items-end row-medium">
+        <div class="row justify-content-center align-items-end row-small">
             <div class="col-12 col-md-6 redbox">
                 <h1 class="page-header">Benefits of Mindfulness for Children</h1>
+            </div>
+        </div>
+
+        <div class="row justify-content-around align-items-end">
+            <div class="col-8 col-md-4 col-lg-3 redbox">
+                <div class="row row-small40">
+                    Benefit 1
+                </div>
+            </div>
+            
+            <div class="col-lg-3 col-md-4 d-none d-md-block redbox">
+                <div class="row row-small40">
+                    Benefit 2
+                </div>
+            </div>
+            
+            <div class="col-3 d-none d-lg-block redbox">
+                <div class="row row-small40">
+                    Benefit 3
+                </div>
             </div>
         </div>
 
