--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
     <!-- /Main Content 3 - right aligned - Facts section-->
 
-    <!-- Experience section-->
+    <!-- Main Container 4 - left aligned - Experience section-->
 
 
     <div class="container-fluid container-large container-callout-dark">
@@ -182,18 +182,7 @@
 
     </div>
 
-
-    <!--<div class="container-fluid container-medium container-callout-dark">-->
-
-    <!--    <div class="row justify-content-center align-items-end row-medium">-->
-    <!--        <div class="col-12 col-md-6 redbox">-->
-    <!--            <h1 class="page-header">Content</h1>-->
-    <!--        </div>-->
-    <!--    </div>-->
-
-
-    <!--</div>-->
-    <!-- /Experience section-->
+    <!-- / Main Container 4 - left aligned - Experience section-->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
