Simply form to email and button only

--- a/index.html
+++ b/index.html
@@ -198,10 +198,11 @@
                         <form>
   <div class="form-group">
     <!--<label for="exampleInputEmail1">Email address</label>-->
-    <input type="email" class="form-control form-email-footer" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    <input type="email" class="form-control form-email-wide" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    <!--<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>-->
+      <button type="submit" class="btn btn-success btn-lg">Mindful News</button>
   </div>
-  <button type="submit" class="btn btn-success btn-lg">Mindful News</button>
+
 </form>
                         
                         
