--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         
                         <form>
                             <div class="row">
-  <div class="col-12 col-md-6 text-right">
+  <div class="col-12 col-md-6 text-center text-md-right">
     <input type="email" class="form-control form-email-wide" placeholder="Enter email">
       
   </div>
