--- a/test.html
+++ b/test.html
@@ -28,6 +28,57 @@
   
 </div>
 
+
+    <!-- Footer-->
+
+    <div class="container-fluid container-small container-callout-light">
+
+        <div class="row row-full align-items-center ">
+            <div class="col-12">
+
+                <div class="row justify-content-center">
+                    <div class="col-8 redbox">
+                        <form>
+                            <div class="row">
+                                <div class="col-12 col-md-6 text-center text-md-right">
+                                    <input type="email" class="form-control form-email-wide" placeholder="Enter email">
+
+                                </div>
+                                <div class="col-12 col-md-6 btn-left">
+                                    <button type="submit" class="btn btn-success btn-lg">Mindful News</button>
+                                </div>
+
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-1">
+
+
+                        <div class="social-button">
+                            <a target="_blank" href="#">
+                                <i class="fab fa-facebook" aria-hidden="true"></i>
+                                <span class="sr-only">Facebook</span>
+                                </a>
+                        </div>
+                        <div class="social button">
+                            <a target="_blank" href="#">
+                            <i class="fab fa-twitter social-button" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+
+
+            </div>
+
+
+        </div>
+
+    </div>
+
+    <!-- / Footer-->
 </body>
 
 </html>
