--- a/index.html
+++ b/index.html
@@ -193,7 +193,9 @@
             <div class="col-12 text-center redbox">
                 
                 <form>
-                <div class="footer-item"><input type="email" class="form-control form-email-wide footer-item" placeholder="Enter email"></div>
+                <div class="footer-item">
+                    <label class="sr-only" for="email">Enter your email address </label>
+                    <input type="email" class="form-control form-email-wide footer-item" placeholder="Enter email address"></div>
                 <div class="footer-item"><button type="submit" class="btn btn-success btn-lg">Mindful News</button></div>
                 <div class="footer-item">
                     <div class="social-button footer-item">
