Reduce height of main containers and increase only at size lg

--- a/index.html
+++ b/index.html
@@ -84,20 +84,20 @@
         </div>
 
         <div class="row justify-content-around align-items-end">
-            <div class="col-8 col-md-4 col-lg-3 redbox infobox-light">
-                <div class="row row-small40">
+            <div class="col-8 col-md-4 col-lg-3 redbox infobox-light row-medium">
+                <div class="row row-full">
                     Benefit 1
                 </div>
             </div>
 
             <div class="col-lg-3 col-md-4 d-none d-md-block redbox infobox-light">
-                <div class="row row-small40">
+                <div class="row row-full">
                     Benefit 2
                 </div>
             </div>
 
             <div class="col-3 d-none d-lg-block redbox infobox-light">
-                <div class="row row-small40">
+                <div class="row row-full">
                     Benefit 3
                 </div>
             </div>
