Improve responsive behaviour for Main Container 2

--- a/test.html
+++ b/test.html
@@ -11,24 +11,44 @@
 </head>
 
 <body>
+<div class="container-fluid container-large container-callout-dark">
 
- <div class="container container-medium">
-  
-  <div class="row align-items-center row-small redbox">
-    <div class="col">
-      One of three columns
-    </div>
-    <div class="col">
-      One of three columns
-    </div>
-    <div class="col">
-      One of three columns
-    </div>
-  </div>
-  
+       
+
+ <div class="row justify-content-center align-items-end row-small">
+            <div class="col-12 col-md-6 redbox">
+                <h1 class="page-header">Benefits of Mindfulness for Children</h1>
+            </div>
+        </div>
+
+        <div class="row justify-content-around align-items-end">
+            <div class="col-8 col-md-4 col-lg-3 redbox infobox-light ">
+                <div class="row row-full">
+                    Benefit 1
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-4 d-none d-md-block redbox infobox-light">
+                <div class="row row-full">
+                    Benefit 2
+                </div>
+            </div>
+
+            <div class="col-3 d-none d-lg-block redbox infobox-light">
+                <div class="row row-full">
+                    Benefit 3
+                </div>
+            </div>
+        </div>
+
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6 btn-center redbox">
+                <button class="btn btn-success btn-lg">Become Mindful</button>
+            </div>
+        </div>
 </div>
 
-
+    </div>
     <!-- Footer-->
 
     <div class="container-fluid container-small container-callout-light">
