Switch to Bootstrap properties for centering buttons

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12 btn-center">
+            <div class="col-12 text-center">
                 <button class="btn btn-success btn-lg">Become Mindful</button>
             </div>
         </div>
@@ -77,14 +77,14 @@
     <!-- Main Container 2 - Benefits section-->
     <div class="container-fluid container-large container-callout-dark">
 <div class="row row-full justify-content-center align-items-center">
-    <div class=" col-12 text-center redbox">
+    <div class=" col-12 col-md-6 col-lg-12 text-center redbox">
         Heading
     </div>
     <div class="col-md-6 col-lg-4 text-center redbox">
         Benefit 1
     </div>
     
-        <div class="col-md-6 col-lg-4 text-center d-none d-md-block redbox">
+        <div class="col-lg-4 text-center d-none d-lg-block redbox">
         Benefit 2
     </div>
     
@@ -121,13 +121,13 @@
                 </div>
 
                 <div class="row justify-content-end box-right">
-                    <div class="col-12 col-md-5 btn-center redbox">
+                    <div class="col-12 col-md-5 text-center redbox">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni non consectetur nesciunt accusantium ipsam sequi iure vero officiis, nemo voluptates aut. Magni, excepturi. Magnam, dolorum?
                     </div>
                 </div>
 
                 <div class="row justify-content-end box-right">
-                    <div class="col-12 col-md-5 btn-center redbox">
+                    <div class="col-12 col-md-5 text-center redbox">
                         <button class="btn btn-success btn-lg">Become Mindful</button>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                 </div>
 
                 <div class="row justify-content-start box-left">
-                    <div class="col-12 col-md-5 btn-center redbox">
+                    <div class="col-12 col-md-5 text-center redbox">
                         <button class="btn btn-success btn-lg">Experience Mindfulness</button>
                     </div>
                 </div>
