Replace height classes with Bootstrap classes

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <!-- Main Container 2 - Benefits section-->
     <div class="container-fluid container-large container-callout-dark">
-<div class="row row-full justify-content-center align-items-center">
+<div class="row h-100 justify-content-center align-items-center">
     <div class=" col-12 col-md-6 col-lg-12 text-center redbox">
         Heading
     </div>
@@ -110,11 +110,11 @@
 
     <div class="container-fluid container-large container-callout-light">
 
-        <div class="row row-full align-items-center">
+        <div class="row h-100 align-items-center">
             <div class="col-12">
 
 
-                <div class="row justify-content-end row-small box-right">
+                <div class="row justify-content-end box-right">
                     <div class="col-12 col-md-5 redbox">
                         <h1 class="page-header">Content</h1>
                     </div>
@@ -146,11 +146,11 @@
 
     <div class="container-fluid container-large container-callout-dark">
 
-        <div class="row row-full align-items-center">
+        <div class="row h-100 align-items-center">
             <div class="col-12">
 
 
-                <div class="row justify-content-start row-small box-left">
+                <div class="row justify-content-start box-left">
                     <div class="col-12 col-md-5 redbox">
                         <h1 class="page-header">Content</h1>
                     </div>
@@ -182,7 +182,7 @@
 
     <div class="container-fluid container-small container-callout-light">
 
-        <div class="row row-full align-items-center justify-content-center">
+        <div class="row h-100 align-items-center justify-content-center">
             <div class="col-12 text-center redbox">
 
                 <form>
