--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 </li>
             </ul>
 
-            <form class="form-inline my-2 my-lg-0 nav-btn-align">
-                <button class="btn btn-outline-success my-2 my-sm-0 btn-center" type="submit">Become Mindful</button>
+            <form class="form-inline my-2 my-lg-0 justify-content-end">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Become Mindful</button>
             </form>
 
         </div>
@@ -157,7 +157,7 @@
                 </div>
 
                 <div class="row justify-content-start box-left">
-                    <div class="col-12 col-md-5 btn-center redbox">
+                    <div class="col-12 col-md-5 text-center redbox">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni non consectetur nesciunt accusantium ipsam sequi iure vero officiis, nemo voluptates aut. Magni, excepturi. Magnam, dolorum?
                     </div>
                 </div>
@@ -180,9 +180,9 @@
 
     <!-- Footer-->
 
-    <div class="container-fluid container-small container-callout-light">
+    <div class="container-fluid container-callout-light">
 
-        <div class="row h-100 align-items-center justify-content-center">
+        <div class="row container-small align-items-center justify-content-center">
             <div class="col-12 text-center redbox">
 
                 <form>
