--- a/index.html
+++ b/index.html
@@ -57,18 +57,19 @@
 
 
     <div class="container-fluid container-large container-callout-light">
-        <div class="row justify-content-center align-items-end row-large">
+        <div class="row justify-content-center text-center align-items-end row-large">
             <div class="col-10 col-sm-6">
 
                 <h1 class="page-header">After School Mindfulness Classes for 7-11 Year Olds</h1>
                 <h3 class="page-header">Holmfirth, West Yorkshire</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 text-center">
                 <button class="btn btn-success btn-lg">Become Mindful</button>
             </div>
         </div>
+        <!--<div class="row">-->
+        <!--    <div class="col-12 text-center">-->
+                
+        <!--    </div>-->
+        <!--</div>-->
     </div>
 
     <!-- /Top callout section-->
