Use grid to control footer form with instead of fixed width

--- a/index.html
+++ b/index.html
@@ -144,10 +144,8 @@
 
     <div class="container-fluid container-callout-light">
         <div class="row container-small align-items-center justify-content-center">
-            <div class="col-12 text-center redbox">
+            <div class="col-8 col-sm-6 text-center redbox">
                 <form>
-
-                </form>
                 <div class="footer-item">
                     <label class="sr-only" for="email">Enter your email address </label>
                     <input type="email" class="form-control form-email-wide footer-item" placeholder="Enter email address">
@@ -155,6 +153,7 @@
                 <div class="footer-item">
                     <button type="submit" class="btn btn-success btn-lg">Mindful News</button>
                 </div>
+                </form>
                 <div class="footer-item">
 
                     <ul class="list-inline">
@@ -174,19 +173,6 @@
 
                     </ul>
 
-
-                    <!--<div class="social-button footer-item">-->
-                    <!--    <a target="_blank" href="#">-->
-                    <!--        <i class="fab fa-facebook" aria-hidden="true"></i>-->
-                    <!--        <span class="sr-only">Facebook</span>-->
-                    <!--    </a>-->
-                    <!--</div>-->
-                    <!--<div class="social button footer-item">-->
-                    <!--    <a target="_blank" href="#">-->
-                    <!--        <i class="fab fa-twitter social-button" aria-hidden="true"></i>-->
-                    <!--        <span class="sr-only">Facebook</span>-->
-                    <!--    </a>-->
-                    <!--</div>-->
                 </div>
             </div>
         </div>
