Add ypadding to containers including media query for lg size

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- /Navbar -->
     <!-- Top callout section-->
 
-    <div class="container-fluid container-large container-callout-light">
+    <div class="container-fluid container-large-top container-callout-light">
         <div class="row justify-content-center text-center align-items-end row-large">
             <div class="col-10 col-sm-6">
                 <h1 class="page-header">After School Mindfulness Classes for 7-11 Year Olds</h1>
@@ -114,19 +114,19 @@
         <div class="row h-100 align-items-center">
             <div class="col-12">
 
-                <div class="row justify-content-start box-left">
+                <div class="row justify-content-start ">
                     <div class="col-12 col-md-5 redbox">
                         <h1 class="page-header">Content</h1>
                     </div>
                 </div>
 
-                <div class="row justify-content-start box-left">
+                <div class="row justify-content-start ">
                     <div class="col-12 col-md-5 text-center redbox">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni non consectetur nesciunt accusantium ipsam sequi iure vero officiis, nemo voluptates aut. Magni, excepturi. Magnam, dolorum?
                     </div>
                 </div>
 
-                <div class="row justify-content-start box-left">
+                <div class="row justify-content-start ">
                     <div class="col-12 col-md-5 text-center redbox">
                         <button class="btn btn-success btn-lg">Experience Mindfulness</button>
                     </div>
@@ -137,7 +137,7 @@
     <!-- / Main Container 4 - left aligned - Experience section-->
     <!-- Footer-->
 
-    <div class="container-fluid container-callout-light">
+    <div class="container-fluid container-footer container-callout-light">
         <div class="row container-small align-items-center justify-content-center">
             <div class="col-8 col-sm-6 text-center redbox">
                 <form>
