--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <div class="container-fluid container-large-top container-callout-light">
         <div class="row justify-content-center text-center align-items-end row-large">
             <div class="col-10 col-sm-6">
-                <h1 class="page-header">After School Mindfulness Classes for 7-11 Year Olds</h1>
-                <h3 class="page-header">Holmfirth, West Yorkshire</h3>
+                <h1 class="page-heading">After School Mindfulness Classes for 7-11 Year Olds</h1>
+                <h3 class="page-heading">Holmfirth, West Yorkshire</h3>
                 <button class="btn btn-success btn-lg">Become Mindful</button>
             </div>
         </div>
@@ -89,10 +89,10 @@
     <!-- Main Content 3 - Right Aligned - Facts section-->
 
     <div class="container-fluid container-large container-callout-light">
-        <div class="row h-100 justify-content-end">
+        <div class="row justify-content-end">
 
             <div class="col-md-4 offset-md-8 redbox">
-                <h1 class="page-header">Content</h1>
+                <h1 class="page-heading">Content</h1>
             </div>
 
             <div class=" col-md-4 offset-md-8 redbox">
@@ -111,12 +111,12 @@
     <!-- Main Container 4 - left aligned - Experience section-->
 
     <div class="container-fluid container-large container-callout-dark">
-        <div class="row h-100 align-items-center">
+        <div class="row align-items-center">
             <div class="col-12">
 
                 <div class="row justify-content-start ">
                     <div class="col-12 col-md-5 redbox">
-                        <h1 class="page-header">Content</h1>
+                        <h1 class="page-heading">Content</h1>
                     </div>
                 </div>
 
