--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </nav>
 
     <!-- /Navbar -->
-    <!-- Top callout section-->
+    <!-- Main Content section-->
 
     <div class="container-fluid container-large-top container-callout-light">
         <div class="row justify-content-center text-center align-items-end row-large">
@@ -60,8 +60,9 @@
         </div>
     </div>
 
-    <!-- /Top callout section-->
-    <!-- Main Container 2 - Benefits section-->
+    <!-- /Main Content section-->
+    
+    <!-- Secondary Level Container -2- Benefits section-->
     <div class="container-fluid container-large container-callout-dark">
         <div class="row h-100 justify-content-center align-items-center">
             <div class="col-12 col-md-6 col-lg-12 text-center redbox">
@@ -85,8 +86,9 @@
         </div>
     </div>
 
-    <!-- /Main Container 2-->
-    <!-- Main Content 3 - Right Aligned - Facts section-->
+    <!-- /Secondary Level Container -2- Benefits section-->
+    
+    <!-- Secondary Level Container -3- Right Aligned - Facts section-->
 
     <div class="container-fluid container-large container-callout-light">
         <div class="row justify-content-end">
@@ -106,9 +108,9 @@
         </div>
     </div>
 
-    <!-- /Main Content 3 - right aligned - Facts section-->
+    <!-- /Secondary Level Container -3- Right Aligned - Facts section-->
 
-    <!-- Main Container 4 - left aligned - Experience section-->
+    <!-- Secondary Level Container -4- left aligned - Experience section-->
 
     <div class="container-fluid container-large container-callout-dark">
         <div class="row align-items-center">
@@ -134,7 +136,7 @@
             </div>
         </div>
     </div>
-    <!-- / Main Container 4 - left aligned - Experience section-->
+    <!-- / Secondary Level Container -4- left aligned - Experience section-->
     <!-- Footer-->
 
     <div class="container-fluid container-footer container-callout-light">
