Restructure h1 h2 h3 to reflect Semantics

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="container-fluid container-large container-callout-dark">
         <div class="row container-wide justify-content-center align-items-center">
             <div class="col-12 col-md-6 col-lg-12 text-center redbox">
-                Heading
+                <h2>Heading</h2>
             </div>
             <div class="col-md-6 col-lg-4 text-center redbox">
                 Benefit 1
@@ -94,7 +94,7 @@
         <div class="row justify-content-end">
 
             <div class="col-md-4 offset-md-8 redbox">
-                <h1 class="page-heading">Content</h1>
+                <h2 class="page-heading">Content</h1>
             </div>
 
             <div class=" col-md-4 offset-md-8 redbox">
@@ -118,7 +118,7 @@
 
                 <div class="row justify-content-start ">
                     <div class="col-12 col-md-5 redbox">
-                        <h1 class="page-heading">Content</h1>
+                        <h2 class="page-heading">Content</h1>
                     </div>
                 </div>
 
