Change section divs for semantic elements

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </nav>
 
     <!-- /Navbar -->
-    <!-- Main Content section-->
+    <!-- Header section-->
 
-    <div class="container-fluid container-large-top container-callout-light">
+    <header class="container-fluid container-large-top container-callout-light">
         <div class="row justify-content-center text-center align-items-end row-large">
             <div class="col-10 col-sm-6">
                 <h1 class="page-heading">After School Mindfulness Classes for 7-11 Year Olds</h1>
@@ -58,12 +58,12 @@
                 <button class="btn btn-success btn-lg">Become Mindful</button>
             </div>
         </div>
-    </div>
+    </header>
 
-    <!-- /Main Content section-->
-    
+    <!-- /Header section-->
+    <main>
     <!-- Secondary Level Container -2- Benefits section-->
-    <div class="container-fluid container-large container-callout-dark">
+    <section class="container-fluid container-large container-callout-dark">
         <div class="row container-wide justify-content-center align-items-center">
             <div class="col-12 col-md-6 col-lg-12 text-center redbox">
                 <h2>Heading</h2>
@@ -84,13 +84,13 @@
                 Button
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- /Secondary Level Container -2- Benefits section-->
     
     <!-- Secondary Level Container -3- Right Aligned - Facts section-->
 
-    <div class="container-fluid container-wide container-large container-callout-light">
+    <section class="container-fluid container-wide container-large container-callout-light">
         <div class="row justify-content-end">
 
             <div class="col-md-4 offset-md-8 redbox">
@@ -106,13 +106,13 @@
             </div>
 
         </div>
-    </div>
+    </section>
 
     <!-- /Secondary Level Container -3- Right Aligned - Facts section-->
 
     <!-- Secondary Level Container -4- left aligned - Experience section-->
 
-    <div class="container-fluid container-wide container-large container-callout-dark">
+    <section class="container-fluid container-wide container-large container-callout-dark">
         <div class="row align-items-center">
             <div class="col-12">
 
@@ -135,11 +135,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- / Secondary Level Container -4- left aligned - Experience section-->
+    </main>
     <!-- Footer-->
 
-    <div class="container-fluid container-footer container-callout-light">
+    <footer class="container-fluid container-footer container-callout-light">
         <div class="row container-small align-items-center justify-content-center">
             <div class="col-8 col-sm-6 text-center redbox">
                 <form>
@@ -173,7 +174,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </footer>
 
     <!-- / Footer-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
