Add background image for header

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- /Navbar -->
     <!-- Header section-->
 
-    <header class="container-fluid container-large-top container-callout-light">
+    <header class="container-fluid container-large-top">
         <div class="row justify-content-center text-center align-items-end row-large">
             <div class="col-10 col-sm-6">
                 <h1 class="page-heading">After School Mindfulness Classes for 7-11 Year Olds</h1>
@@ -125,6 +125,7 @@
                 <div class="row justify-content-start ">
                     <div class="col-12 col-md-5 text-center redbox">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni non consectetur nesciunt accusantium ipsam sequi iure vero officiis, nemo voluptates aut. Magni, excepturi. Magnam, dolorum?
+                    
                     </div>
                 </div>
 
