--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <header class="container-fluid container-large-top">
         <div class="row justify-content-center text-center align-items-end row-large">
-            <div class="col-10 col-sm-6">
+            <div class="col-10 col-sm-5 offset-sm-2 offset-md-5">
                 <h1 class="page-heading">After School Mindfulness Classes for 7-11 Year Olds</h1>
                 <h3 class="page-heading">Holmfirth, West Yorkshire</h3>
                 <button class="btn btn-success btn-lg">Become Mindful</button>
