Style footer bg colour

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Calm Little Stars<img src="assets/images/dandelion-seed-white.png" width=30px height=30px></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon custom-toggler"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarToggler">
@@ -142,16 +142,16 @@
     </main>
     <!-- Footer-->
 
-    <footer class="container-fluid container-footer container-callout-light">
+    <footer class="container-fluid container-footer container-callout-dark">
         <div class="row container-small align-items-center justify-content-center">
-            <div class="col-8 col-sm-6 text-center redbox">
+            <div class="col-8 col-sm-6 text-center">
                 <form>
                     <div class="footer-item">
                         <label class="sr-only" for="email">Enter your email address </label>
                         <input type="email" class="form-control form-email-wide footer-item" placeholder="Enter email address">
                     </div>
                     <div class="footer-item">
-                        <button type="submit" class="btn btn-success btn-lg">Mindful News</button>
+                        <button type="submit" id="btn--footer" class="btn btn-success btn-lg">Mindful News</button>
                     </div>
                 </form>
                 <div class="footer-item">
