--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Calm Little Stars<img src="assets/images/dandelion-seed-white.png" width=30px height=30px></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon custom-toggler"></span>
+            <span class="navbar-toggler-icon" id="custom-toggler"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarToggler">
@@ -159,14 +159,14 @@
                     <ul class="list-inline">
                         <li class="list-inline-item">
                             <a target="_blank" href="#">
-                                <i class="fab fa-facebook" aria-hidden="true"></i>
+                                <i class="fab fa-facebook btn--social-icons" aria-hidden="true"></i>
                                 <span class="sr-only">Facebook</span>
                             </a>
                         </li>
 
                         <li class="list-inline-item">
                             <a target="_blank" href="#">
-                                <i class="fab fa-twitter" aria-hidden="true"></i>
+                                <i class="fab fa-twitter btn--social-icons" aria-hidden="true"></i>
                                 <span class="sr-only">Twitter</span>
                             </a>
                         </li>
