Add hover color to navbar-brand

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <form>
                     <div class="footer-item">
                         <label class="sr-only" for="email">Enter your email address </label>
-                        <input type="email" class="form-control form-email-wide footer-item" placeholder="Enter email address">
+                        <input type="email" class="form-control input--text footer-item" placeholder="Enter email address">
                     </div>
                     <div class="footer-item">
                         <button type="submit" id="btn--footer" class="btn btn-success btn-lg">Mindful News</button>
